- Fix bug #27669 (Dmitry). Fixes: <?         class A         {                 function hello()                 {                         echo "Hello World\n";                 }         }         $y[0] = 'hello';         A::$y[0](); ?>

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@168657 c90b9560-bf6c-de11-be94-00142212c4b1